feat: 发布MVP1.2.0正式版
1. 添加状态栏图标；
2. 打通系统设置模块配置项；
3. 添加一键打包脚本；
4. 打通MVPv1全链路，发布正式包。

--- a/docs/项目开发进度指南.md
+++ b/docs/项目开发进度指南.md
@@ -1,6 +1,6 @@
 ---
 title: ClipLike 项目开发进度指南
-updated: 2026-02-03
+updated: 2026-02-04
 ---
 
 ## 使用说明
@@ -60,13 +60,22 @@ updated: 2026-02-03
   - 鼠标触发仅限真实选区与空选区自动隐藏
   - 鼠标触发延时与阈值调优（提升选区唤起稳定性）
   - UI 测试稳定性修复（跳过不稳定的启动/性能用例）
-- 进行中
-  - 设置页功能适配（UI 微调与交互完善）
-- 已暂停（低优先级）
-  - 选区无反应问题定位（AX 取选区）
-  - 动作链路打通
-- 待开始
+  - 剪贴板隔离与恢复（确保非复制操作不污染剪贴板）
+  - Bob 翻译集成修复（移除 App Sandbox，多 Bundle ID 支持）
+  - LocalRAG Hub 粘贴优化（增加延迟，确保焦点正确）
+  - 系统配置完善（移除全局快捷键唤起，仅保留鼠标触发）
+  - 状态栏图标实现（点击打开设置，绑定显示设置）
+  - 开机启动实现（Launch Agent 方案）
+  - 菜单栏图标尺寸优化（26x26）与右键菜单（设置/重启/退出）
+  - 一键打包脚本与发布文档（v1.2.0）
+
+- MVP 里程碑 (v1.2.0)
+  - 核心功能完备：选区触发、浮窗显示、基础动作（复制/搜索/翻译/链接/RAG）
+  - 系统集成完备：权限引导、开机启动、状态栏管理、设置面板
+  - 稳定性：多重选区获取兜底、剪贴板保护、异常处理
+  - 发布准备：图标、打包脚本、文档
+
+- 待开始（后续迭代）
   - AX 选区变化通知
-  - 选区获取稳定性增强与兜底
-  - 设置面板与规则配置
-  - 开机启动能力
+  - 针对特定 App 的规则配置（黑白名单）
+  - 更多自定义动作插件支持
