fix: 修选取触发异常相关逻辑；修复卡死问题

--- a/docs/项目开发进度指南.md
+++ b/docs/项目开发进度指南.md
@@ -1,6 +1,6 @@
 ---
 title: ClipLike 项目开发进度指南
-updated: 2026-02-04
+updated: 2026-02-05
 ---
 
 ## 使用说明
@@ -68,6 +68,10 @@ updated: 2026-02-04
   - 开机启动实现（Launch Agent 方案）
   - 菜单栏图标尺寸优化（26x26）与右键菜单（设置/重启/退出）
   - 一键打包脚本与发布文档（v1.2.0）
+  - 修复非可选区域误触发浮窗与空选区动作卡死
+  - 触发门槛优化：降低拖拽阈值（8.0->3.0）并优先信任 AX 选区结果，解决微信等 App 小选区不触发问题
+  - 兜底策略增强：恢复空选区浮窗（针对不支持 AX 的 App），并结合拖拽阈值减少点击误触
+  - 应用入口优化：强制隐藏 Dock 图标（Accessory 模式），支持点击 App 图标打开设置（applicationShouldHandleReopen）
 
 - MVP 里程碑 (v1.2.0)
   - 核心功能完备：选区触发、浮窗显示、基础动作（复制/搜索/翻译/链接/RAG）
